manifests/plex/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex-server
  namespace: plex
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plex-server
  template:
    metadata:
      labels:
        app: plex-server
    spec:
      nodeSelector:
        kubernetes.io/hostname: ip-192-168-86-33
      containers:
      - name: plex
        image: plexinc/pms-docker:latest
        ports:
        - containerPort: 32400
          name: plex-web
        - containerPort: 3005
          name: plex-companion
        - containerPort: 8324
          name: roku-companion
        - containerPort: 32469
          name: dlna-tcp
        - containerPort: 1900
          name: dlna-udp
          protocol: UDP
        - containerPort: 32410
          name: gdm-1
          protocol: UDP
        - containerPort: 32412
          name: gdm-2
          protocol: UDP
        - containerPort: 32413
          name: gdm-3
          protocol: UDP
        - containerPort: 32414
          name: gdm-4
          protocol: UDP
        volumeMounts:
        - name: plex-config-volume
          mountPath: /config
        - name: plex-transcode-volume
          mountPath: /transcode
        - name: music-library
          mountPath: /music
        resources:
          requests:
            memory: "1Gi"
            cpu: "500m"
          limits:
            memory: "4Gi"
            cpu: "2"
      volumes:
      - name: plex-config-volume
        emptyDir: {}
      - name: plex-transcode-volume
        emptyDir: {}
      - name: music-library
        persistentVolumeClaim:
          claimName: plex-music-pvc
