manifests/plex/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex-service
  namespace: plex
spec:
  type: NodePort
  ports:
  - port: 32400
    targetPort: 32400
    nodePort: 32400
    name: plex-web
  - port: 3005
    targetPort: 3005
    name: plex-companion
  - port: 8324
    targetPort: 8324
    name: roku-companion
  selector:
    app: plex-server
