manifests/plex/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-max-temp-file-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: plex-ingress-v2
  namespace: plex
spec:
  ingressClassName: nginx
  rules:
  - host: plex.kraken-plugins.com
    http:
      paths:
      - backend:
          service:
            name: plex-service
            port:
              number: 32400
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - plex.kraken-plugins.com
    secretName: plex-kraken-plugins-tls
